# Synapse-AI

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 07aa676d4622_change_source_title_uniqueness.py  1b3874f6e916_create_notebook_source_tables.py  9a8887c1f3cd_create_users_table.py  c555627865dd_update_users_table.py  d0c73aef4afb_add_chatmessage_table.py
src/: config.py  database.py  frontend.py  main.py  models.py
src/ai_providers/: constants.py  dependencies.py  ingestion.py  prompts.py  schemas.py  service.py  vector_store.py
src/auth/: dependencies.py  oauth.py  router.py  security.py  service.py
src/notebooks/: models.py  router.py  schemas.py  service.py
src/users/: models.py  schemas.py
